--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   http: ^1.3.0 # for handling network calls
   flutter_dotenv: ^5.2.1 # for handling multiple environments
+  provider: ^6.1.4 # for state management
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
