--- a/.env.prod
+++ b/.env.prod
@@ -1,3 +1,5 @@
 USERS_BASE_URL=https://reqres.in/api
-USERS_API_KEY=
-MOVIES_BASE_URL=
+USERS_API_KEY=reqres-free-v1
+MOVIES_BASE_URL=https://api.themoviedb.org/3/
+MOVIES_IMAGES_BASE_URL=https://image.tmdb.org/t/p/w185
+THE_MOVIES_DB_API_KEY=
