--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   provider: ^6.1.4 # for state management
   cached_network_image: ^3.4.1 # for image caching
   go_router: ^15.1.1 # for handling routing across the app
+  intl: ^0.20.2 # for handling DateTime parsing
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
