--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   go_router: ^15.1.1 # for handling routing across the app
   intl: ^0.20.2 # for handling DateTime parsing
   url_launcher: ^6.3.1 # for launching URLs in-app
+  hive: ^2.2.3 # local DB for handling local operations
+  hive_flutter: ^1.1.0 # NoSQL DB for Local Data Storage
+  connectivity_plus: ^6.1.4 # for checking the internet connectivity state across the app
+  workmanager: ^0.5.2 # for handling background tasks in the app
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -45,6 +49,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  hive_generator: ^2.0.1 # for generating .g classes for hive
+  build_runner: ^2.4.15 # for file generation
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
