--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@
 /packages/flutter/coverage/
 version
 analysis_benchmark.json
+*.g.dart
 
 # packages file containing multi-root paths
 .packages.generated
